--- a/MVCAppAssignment2/wwwroot/css/site.css
+++ b/MVCAppAssignment2/wwwroot/css/site.css
@@ -69,3 +69,31 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+#PersonList {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#PersonList td, #PersonList th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#PersonList tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#PersonList tr:hover {
+    background-color: #ddd;
+}
+
+#PersonList th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
