--- a/MVCAppAssignment2/Views/People/Index.cshtml
+++ b/MVCAppAssignment2/Views/People/Index.cshtml
@@ -6,36 +6,71 @@
 
 <h2>People</h2>
 
-@if (Model.PersonList.Count > 0)     // Lets start checking the Model data. Kan hela Model vara null förresten??
-{
-    <div id="ListContainer">
-        <table id="PersonList">
-
-            <tr>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>Phone nr.</th>
-                <th>City</th>
-                <th>Action</th>
-            </tr>
-            @foreach (Person aPerson in Model.PersonList)
-            {
+@*@if (Model.PersonList.Count > 0)     // Lets start checking the Model data. Kan hela Model vara null förresten??
+    {
+        <div id="ListContainer">      //===THE OLD HTML TABLE TRICK===
+            <table id="PersonList">
                 <tr>
-                    <td>@aPerson.FirstName</td>
-                    <td>@aPerson.LastName</td>
-                    <td>@aPerson.Phone</td>
-                    <td>@aPerson.City</td>
-                    <td><a asp-action="Remove" asp-controller="People" asp-route-id="@aPerson.Id">Remove</a></td>
-                    @* <td><a asp-action="Edit" asp-controller="People" asp-route-id="@aPerson.Id">Edit</a> </td>*@
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Phone nr.</th>
+                    <th>City</th>
+                    <th>Action</th>
                 </tr>
-            }
-        </table>
-    </div>
+                @foreach (Person aPerson in Model.PersonList)
+                {
+                    <tr>
+                        <td>@aPerson.FirstName</td>
+                        <td>@aPerson.LastName</td>
+                        <td>@aPerson.Phone</td>
+                        <td>@aPerson.City</td>
+                        <td><a asp-action="Remove" asp-controller="People" asp-route-id="@aPerson.Id">Remove</a></td>
+                    </tr>
+                }
+            </table>
+        </div>
+    }
+    else
+    {
+        <h5>No data to show.</h5>
+    }
+    <hr />*@
+
+@if (Model.PersonList.Count > 0)
+{
+
+    @*<div class="row">             //===THE BOOTSTRAP LOOSE TABLE TRICK===
+            <div class="col-3">
+                <h5>First Name</h5>
+            </div>
+            <div class="col-3">
+                <h5>Last Name</h5>
+            </div>
+            <div class="col-3">
+                <h5>Phone</h5>
+            </div>
+            <div class="col-2">
+                <h5>City</h5>
+            </div>
+            <div class="col-1">
+                <h5>Action</h5>
+            </div>
+        </div>*@
+
+    @foreach (Person aPerson in Model.PersonList)  //===THE BOOTSTRAP CARDS TRICK===
+    {
+        <partial name="../Shared/_personThumbnail" model="aPerson" />
+    }
+
+
+    <div style="clear:both"></div> <!--- Resets the float:left in the Cards -->
+
 }
 else
 {
     <h5>No data to show.</h5>
 }
+
 
 <hr />
 <h4>Filter the list</h4>
