--- a/MVCAppAssignment2/wwwroot/css/site.css
+++ b/MVCAppAssignment2/wwwroot/css/site.css
@@ -70,7 +70,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-
+/*--------- start of Table styling ------------*/
 #PersonList {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -97,3 +97,11 @@ body {
     background-color: #4CAF50;
     color: white;
 }
+/*----- the end of table styling ---------*/
+
+
+.selector-for-some-widget {
+    box-sizing: content-box;
+}
+
+.card
