--- a/MVCAppAssignment2/Views/_ViewImports.cshtml
+++ b/MVCAppAssignment2/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using MVCAppAssignment2.Models
 @using MVCAppAssignment2.Models.Data
 @using MVCAppAssignment2.Models.Service
+@using MVCAppAssignment2.Models.ViewModel
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
