--- a/MVCAppAssignment2/Views/Shared/_AllPersonsPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_AllPersonsPartial.cshtml
@@ -6,16 +6,16 @@
 
 @if (Model.PersonList.Count > 0)
 {
-    <div class="row">
-        @*===THE BOOTSTRAP LOOSE TABLE TRICK===*@
+    <div class="row" id="head">
+        @*===THE BOOTSTRAP LOOSE DIV-TABLE TRICK===*@
 
-        <div class="col-3">
+        <div class="col-2">
             <h5>First Name</h5>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <h5>Last Name</h5>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <h5>Phone</h5>
         </div>
         <div class="col-2">
@@ -24,14 +24,17 @@
         <div class="col-1">
             <h5>Id</h5>
         </div>
+        <div class="col-1">
+            <h5>Action</h5>
+        </div>
+        <div class="col-1">
+            <h5>Action</h5>
+        </div>
     </div>
-
-    @foreach (Person aPerson in Model.PersonList)  //===THE BOOTSTRAP CARDS TRICK===
+    @foreach (Person aPerson in Model.PersonList)  //===THE BOOTSTRAP DIV-TABLE TRICK===
     {
         <partial name="../Shared/_PersonPartial" model="aPerson" />
     }
-
-
 }
 else
 {
