--- a/MVCAppAssignment2/Views/Shared/_OnePersonPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_OnePersonPartial.cshtml
@@ -4,13 +4,13 @@
 <div class="row">
     @*===THE BOOTSTRAP LOOSE TABLE TRICK===*@
 
-    <div class="col-3">
+    <div class="col-2">
         <h5>First Name</h5>
     </div>
-    <div class="col-3">
+    <div class="col-2">
         <h5>Last Name</h5>
     </div>
-    <div class="col-3">
+    <div class="col-2">
         <h5>Phone</h5>
     </div>
     <div class="col-2">
@@ -18,6 +18,12 @@
     </div>
     <div class="col-1">
         <h5>Id</h5>
+    </div>
+    <div class="col-1">
+        <h5>Action</h5>
+    </div>
+    <div class="col-1">
+        <h5>Action</h5>
     </div>
 </div>
 @if (Model != null)
