--- a/MVCAppAssignment2/Views/Shared/_personThumbnail.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_personThumbnail.cshtml
@@ -4,7 +4,7 @@
 *@
 
 
-<div class="card " style="width: 10rem; background-color: beige; float:left;">
+<div class="card " style="width: 10rem; background-color: beige; float:left;" id="@("crd"+Model.Id)">
     @*<img class="card-img-top" src="..." alt="Card image cap">*@
     <div class="card-body">
         <h5 class="card-title">
@@ -20,20 +20,3 @@
 </div>
 
 
-@*<div class="row">
-        <div class="col-3">
-            @Model.FirstName
-        </div>
-        <div class="col-3">
-            @Model.LastName
-        </div>
-        <div class="col-3">
-            @Model.Phone
-        </div>
-        <div class="col-2">
-            @Model.City
-        </div>
-        <div class="col-1">
-            <a class="btn btn-warning bt" asp-action="Remove" asp-controller="People" asp-route-id="@Model.Id">Remove</a>
-        </div>
-    </div>*@
