Lots of documentation and comments added and some cleanup

--- a/MVCAppAssignment2/Views/AJAX/Index.cshtml
+++ b/MVCAppAssignment2/Views/AJAX/Index.cshtml
@@ -8,14 +8,12 @@
 @*========  Lets start with showing all people =================*@
 
 <div id="showPlaceholder">
-    @*The onload is a test on how to force loading the partial view*@
-
 </div>
 
 
 <hr />
 
-@*=== Show how we can filter and get that people list filtered ===*@
+@*=== Filter, Delete and Show all people ===*@
 
 <h4>Handle the list</h4>
 
