--- a/MVCAppAssignment2/Views/Shared/_AllPersonsPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_AllPersonsPartial.cshtml
@@ -3,6 +3,9 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
+@*  This is a partial view that will show all all people including headline. *@
+@*  The partial view is typically used by Index to show all in the placeholder. *@
+
 
 @if (Model.PersonList.Count > 0)
 {
