--- a/MVCAppAssignment2/Views/Shared/_PersonAboutPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_PersonAboutPartial.cshtml
@@ -1,6 +1,9 @@
 ﻿@model Person
 @using System.Collections.Generic
 
+@* This is a partial view that shows a card info of a specific person *@
+@* This partial view is typically called from the About and replaces the standard partial view *@ 
+
 
 <div class="card " style="width: 10rem; background-color: beige; float:left;" id="@("cab"+Model.Id)">
     @*<img class="card-img-top" src="..." alt="Card image cap">*@
