--- a/MVCAppAssignment2/Views/Shared/_PersonEditPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_PersonEditPartial.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Person
+@*This partial view is displaying the Bootstrap version of a div-table*@
+@*Typically called from Filter - showing one person with a header*@
 
 
 <div class="row" id="@("per" + Model.Id)">
