--- a/MVCAppAssignment2/Views/Shared/_personThumbnail.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_personThumbnail.cshtml
@@ -1,7 +1,6 @@
 ﻿@model MVCAppAssignment2.Models.Data.Person
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
+@*  The card partial view for the first display *@
 
 
 <div class="card " style="width: 10rem; background-color: beige; float:left;" id="@("crd"+Model.Id)">
