Working Databases. But no Foreign Keys

--- a/MVCAppAssignment2/Views/People/Index.cshtml
+++ b/MVCAppAssignment2/Views/People/Index.cshtml
@@ -9,7 +9,7 @@
 @*@if (Model.PersonList.Count > 0)     // Lets start checking the Model data. Kan hela Model vara null förresten??
     {
         <div id="ListContainer">      //===THE OLD HTML TABLE TRICK===
-            <table id="PersonList">
+            <table id="ListList">
                 <tr>
                     <th>First name</th>
                     <th>Last name</th>
