--- a/MVCAppAssignment2/Views/Shared/_Layout.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AJAX" asp-action="Index">People2</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Index">Countries</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="City" asp-action="Index">Cities</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
