--- a/MVCAppAssignment2/wwwroot/css/site.css
+++ b/MVCAppAssignment2/wwwroot/css/site.css
@@ -71,26 +71,26 @@ body {
 }
 
 /*--------- start of Table styling ------------*/
-#PersonList {
+#ListList {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-#PersonList td, #PersonList th {
+#ListList td, #ListList th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#PersonList tr:nth-child(even) {
+#ListList tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#PersonList tr:hover {
+#ListList tr:hover {
     background-color: #ddd;
 }
 
-#PersonList th {
+#ListList th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
