--- a/MVCAppAssignment2/Views/Shared/_PersonEditPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_PersonEditPartial.cshtml
@@ -21,9 +21,9 @@
             <span asp-validation-for="@Model.Phone"></span>
         </div>
         <div class="col-2">
-            <label asp-for="@Model.City"></label>
-            <input asp-for="@Model.City" disabled />
-            <span asp-validation-for="@Model.City"></span>
+            <label asp-for="@Model.InCity.Name"></label>
+            <input asp-for="@Model.InCity.Name" disabled />
+            <span asp-validation-for="@Model.InCity.Name"></span>
         </div>
         <div class="col-1">
             @Model.Id
