--- a/MVCAppAssignment2/Views/Shared/_PersonPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_PersonPartial.cshtml
@@ -15,7 +15,7 @@
         @Model.Phone
     </div>
     <div class="col-2">
-        @Model.City
+        @(Model.InCity==null? "Oops!": Model.InCity.Name)
     </div>
     <div class="col-1">
         @Model.Id
