Database fixes for PeopleLang

--- a/MVCAppAssignment2/Views/City/Index.cshtml
+++ b/MVCAppAssignment2/Views/City/Index.cshtml
@@ -29,8 +29,9 @@
 }
 else
 {
-    <h5>No data to show.</h5>
+    <h5>No City in list. Please add a city below.</h5>
 }
+
 <hr />
 
 <h4>Add City</h4>
