--- a/MVCAppAssignment2/Views/Shared/_Layout.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AJAX" asp-action="Index">People2</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Language" asp-action="Index">Languages</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Index">Countries</a>
                         </li>
                         <li class="nav-item">
