--- a/MVCAppAssignment2/Views/Country/Index.cshtml
+++ b/MVCAppAssignment2/Views/Country/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Countries
 @{
-    ViewData["Title"] = "Create Country";
+    ViewData["Title"] = "Country List";
 }
 
 <h1>Countries Database</h1>
