--- a/MVCAppAssignment2/Views/Shared/_AllPersonsPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_AllPersonsPartial.cshtml
@@ -4,7 +4,7 @@
 *@
 
 @*  This is a partial view that will show all all people including headline. *@
-@*  The partial view is typically used by Index to show all in the placeholder. *@
+@*  The partial view is typically used by Index to Show All in the placeholder. *@
 
 
 @if (Model.PersonList.Count > 0)
@@ -24,8 +24,8 @@
         <div class="col-2">
             <h5>City</h5>
         </div>
-        <div class="col-1">
-            <h5>Id</h5>
+        <div class="col-2">
+            <h5># Lang.</h5>
         </div>
         <div class="col-1">
             <h5>Action</h5>
