--- a/MVCAppAssignment2/Views/City/Index.cshtml
+++ b/MVCAppAssignment2/Views/City/Index.cshtml
@@ -14,6 +14,7 @@
             <tr>
                 <th>Name of City</th>
                 <th>Country</th>
+                <th>People</th>
                 <th>Action</th>
             </tr>
             @foreach (City aCity in Model.CityList)
@@ -21,6 +22,7 @@
                 <tr>
                     <td>@aCity.Name</td>
                     <td>@Model.CountryList.Find(m => m.Id == aCity.CountryId).Name</td>
+                    <td>@(aCity.Peoples.Count)</td>
                     <td><a asp-action="Delete" asp-controller="City" asp-route-id="@aCity.Id">Delete</a></td>
                 </tr>
             }
@@ -42,8 +44,8 @@ else
     <input asp-for="City.Name" />
     <span asp-validation-for="City.Name"></span>
 
-    <label asp-for="CountryId"></label>    @* eller CountryId *@
-    <select asp-for="CountryId">
+    <label asp-for="City.CountryId"></label>    @* eller CountryId *@
+    <select asp-for="City.CountryId">
 
         @foreach (Country aCountry in Model.CountryList)
         {
@@ -53,7 +55,7 @@ else
 
 
     </select>
-    <span asp-validation-for="CountryId"></span>
+    <span asp-validation-for="City.CountryId"></span>
 
     <button>Create</button>
     <button type="reset">Reset</button>
