--- a/MVCAppAssignment2/Views/Shared/_PersonAboutPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_PersonAboutPartial.cshtml
@@ -16,7 +16,7 @@
             @Model.Phone<br />
             @(Model.InCity==null ? "Oops!":Model.InCity.Name)
         </p>
-        <button class="btn btn-info btn-sm" onclick="CloseAbout(@Model.Id, event)">Close</button>
+        <button class="btn btn-info btn-sm" onclick="CloseDetails(@Model.Id, event)">Close</button>
     </div>
 </div>
 
