--- a/MVCAppAssignment2/Views/Shared/_PersonPartial.cshtml
+++ b/MVCAppAssignment2/Views/Shared/_PersonPartial.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.Generic
 
 @* This is a partial view of one single person - typically called from AllPersonsPartial view*@
-@* This partial view is allso called from the about to replace the about info partial view*@
+@* This partial view is allso called from the About to replace the (about) info partial view*@
 
 <div class="row" id="@("per" + Model.Id)">
     <div class="col-2">
@@ -17,11 +17,14 @@
     <div class="col-2">
         @(Model.InCity==null? "Oops!": Model.InCity.Name)
     </div>
-    <div class="col-1">
-        @Model.Id
+    <div class="col-2">
+        @Model.PersonLanguages.Count
     </div>
     <div class="col-1">
-        <button class="btn btn-info btn-sm" onclick="About(@Model.Id , event)" id="@("ab"+@Model.Id)">Details</button>
+        @* <button class="btn btn-info btn-sm" onclick="Edit(@Model.Id , event)" id="@("ab"+@Model.Id)">Edit Languages</button> *@
+        <a class="btn btn-info btn-sm" asp-action="LangEdit" asp-controller="People" method="post" asp-route-id="@Model.Id">Edit Lang</a> @* was:value="@Model.Id"  *@
+        @* <button class="btn btn-info btn-sm" method="post" value="18" formaction="/People/Edit">Edit Lang</button> *@
+        @* <a asp-action="Delete" asp-controller="City" asp-route-id="@aCity.Id">Delete</a> *@
     </div>
     <div class="col-1">
         <button class="btn btn-warning btn-sm" onclick="DeletePerson(@Model.Id ,event)" id="@("del"+@Model.Id)">Delete</button>
