--- a/MVCAppAssignment2/Views/Admin/UserList.cshtml
+++ b/MVCAppAssignment2/Views/Admin/UserList.cshtml
@@ -20,6 +20,7 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Action</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,6 +31,7 @@
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td><a asp-action="Details" asp-controller="Admin" asp-route-id="@item.Id">Details</a></td>
+                            <td><a asp-action="Delete" asp-controller="Account" asp-route-id="@item.Id">Delete</a></td>
                         </tr>
                     }
 
